--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "15.4.2",
     "react-native": "0.41.2",
-    "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git"
+    "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
+    "react-navigation": "^1.0.0-beta.5"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
