flowconfig for somereason

--- a/.flowconfig
+++ b/.flowconfig
@@ -40,5 +40,9 @@ suppress_comment=\\(.\\|\n\\)*\\$FlowFixedInNextDeploy
 
 unsafe.enable_getters_and_setters=true
 
+.expo
+
+.env
+
 [version]
 ^0.37.0
