--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ buck-out/
 android/app/libs
 *.keystore
 
+.expo
+.env
+
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
