--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "base-64": "^0.1.0",
     "react": "15.4.2",
     "react-native": "0.41.2",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git"
