--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "fanative",
   "version": "0.0.1",
   "private": true,
+  "author": null,
+  "main": "main.js",
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
