--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "dotenv": "^4.0.0",
+    "expo": "^15.0.2",
     "base-64": "0.1.0",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
