--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "base-64": "0.1.0",
     "dotenv": "^4.0.0",
     "expo": "^15.0.2",
-    "base-64": "0.1.0",
-    "react": "16.0.0-alpha.6",
+    "react": "^15.5.4",
     "react-native": "0.43.3",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-fetch-blob": "^0.10.4",
