--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "base-64": "0.1.0",
     "dotenv": "^4.0.0",
     "expo": "^15.0.2",
-    "react": "^15.5.4",
+    "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-fetch-blob": "^0.10.4",
