--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.0.1",
   "private": true,
   "author": "Lee Wilson and Darryl Zeigler",
-  "main": "",
+  "main": "main.js",
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "~4.0.0",
     "base-64": "0.1.0",
     "dotenv": "^4.0.0",
     "expo": "~15.0.0",
     "react": "~15.4.2",
-    "react-native": "github:exponent/react-native#sdk-15.0.0",
+    "react-native": "github:exponent/react-native#sdk-14.0.0",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
-    "react-native-fetch-blob": "^0.10.4",
-    "react-native-fs": "2.1.0-rc.1",
-    "@expo/vector-icons": "~4.0.0"
+    "react-native-fetch-blob": "^0.10.5",
+    "react-native-fs": "2.1.0-rc.1"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
